--- a/style.css
+++ b/style.css
@@ -1,8 +1,71 @@
 body {
-    font-family: 'Libre Baskerville', serif;
+    font-family: 'Yusei Magic', sans-serif;
+    background-color: #FCF8FF;
     background-image: url('./images/123-2.jpg');
+    background-position: center;
+    background-repeat: no-repeat;
 }
 
-.btn-start {
-    background-color: blueviolet;
+.splash {
+    font-family: Yusei Magic;
+    font-size: medium;
+    text-align: center;
+    margin: 10px;
+    padding: 20px 50px;
+    /* width: 70%; */
+}
+
+.container {
+    background-color: #296073;
+    font-family: Yusei Magic;
+    font-size: medium;
+    text-align: center;
+    margin: 20px;
+    padding: 40px;
+    border: 2px solid #3596B5;
+    border-radius: 20px;
+    box-sizing: border-box;
+    box-shadow: 2px 2px 10px 0 #ADC5CF;
+    width: 55%;
+}
+
+h1 {
+    text-align:center;
+    font-size: 85px;
+    margin: 200px 0px 0px 300px;
+    color: #FF8066;
+    text-shadow: #ADC5CF 5px -15px 20px;
+}
+
+h3 {
+    font-size: 40px;
+    color: #D5CABD;
+    text-align: center;
+    margin: 20px;
+
+}
+
+p {
+    text-align: justify;
+    font-size: 22px;
+    color: #ADC5CF
+}
+#btn-start {
+    background-color:#D5CABD;
+    margin: 20px;
+    color: #296073;
+    font-size: 30px;
+    text-transform: uppercase;
+
+}
+
+#canvas {
+    display: none;
+}
+
+#restart {
+    /* display: none; */
+    font-size: 30px;
+    text-align: center;
+    align-items: center;
 }
