--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ body {
     background-image: url('./images/123-2.jpg');
     background-position: center;
     background-repeat: no-repeat;
+    margin-top: 0px;
 }
 
 .splash {
@@ -11,7 +12,7 @@ body {
     font-size: medium;
     text-align: center;
     margin: 10px;
-    padding: 20px 50px;
+    padding: 0px 50px;
     /* width: 70%; */
 }
 
@@ -20,19 +21,22 @@ body {
     font-family: Yusei Magic;
     font-size: medium;
     text-align: center;
-    margin: 20px;
+    margin: 50px;
     padding: 40px;
     border: 2px solid #3596B5;
     border-radius: 20px;
     box-sizing: border-box;
     box-shadow: 2px 2px 10px 0 #ADC5CF;
-    width: 55%;
+    width: 40%;
 }
 
 h1 {
+    position: relative;
+    display: flex;
+    justify-content:space-around;
     text-align:center;
     font-size: 85px;
-    margin: 200px 0px 0px 300px;
+    margin: 0px 0px 120px 300px;
     color: #FF8066;
     text-shadow: #ADC5CF 5px -15px 20px;
 }
@@ -42,6 +46,7 @@ h3 {
     color: #D5CABD;
     text-align: center;
     margin: 20px;
+    text-shadow: #FF8066 5px 5px 15px;
 
 }
 
@@ -50,22 +55,29 @@ p {
     font-size: 22px;
     color: #ADC5CF
 }
+
+p span {
+    color: #FF8066;
+}
 #btn-start {
     background-color:#D5CABD;
     margin: 20px;
-    color: #296073;
+    color: #FF8066;
     font-size: 30px;
     text-transform: uppercase;
-
+    margin-left: 30%;
 }
 
 #canvas {
     display: none;
+    margin-left: 30px;
 }
 
-#restart {
-    /* display: none; */
-    font-size: 30px;
+.gameover {
+    display: none;
+    font-size: 150px;
     text-align: center;
-    align-items: center;
+    background-image: url('./images/backgroundCastles.png');
+    background-repeat: repeat;
+    padding: 330px 0px;
 }
