--- a/style.css
+++ b/style.css
@@ -73,11 +73,18 @@ p span {
     margin-left: 30px;
 }
 
+
 .gameover {
     display: none;
     font-size: 150px;
     text-align: center;
     background-image: url('./images/backgroundCastles.png');
-    background-repeat: repeat;
-    padding: 330px 0px;
+    background-repeat: no-repeat;
+    padding: 280px 0px;
+}
+
+#couple {
+    position: relative;
+    margin-left: 40%;
+    width: 100px;
 }
