--- a/style.css
+++ b/style.css
@@ -32,6 +32,26 @@ body {
     box-sizing: border-box;
     box-shadow: 2px 2px 10px 0 #ADC5CF;
     width: 40%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+#teamcard {
+    margin-top: 50px;
+    width: 700px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    background-color: #FCF8FF;
+    display: block;
+    font-family: Yusei Magic;
+    font-size: 18px;
+    text-align: center;
+}
+
+.friendsimg {
+    width: 50px;
+    height: 70px;
 }
 
 h1 {
@@ -54,7 +74,7 @@ h3 {
 
 }
 
-p {
+.container p {
     text-align: justify;
     font-size: 22px;
     color: #ADC5CF
@@ -92,6 +112,5 @@ p span {
 #couple {
     padding-top: 300px;
     position: relative;
-    margin-left: 40%;
     width: 100px;
 }
